Cleaner heatmap tooltips and column width. Fixed annotation clipping on graphs.

--- a/src/posts/pandemic-trade-offs-august-2021/heatmap-summary.css
+++ b/src/posts/pandemic-trade-offs-august-2021/heatmap-summary.css
@@ -49,20 +49,22 @@
 	display:none;
 	position:absolute; 
 	z-index:1000;
-	border:1px solid rgb(139, 139, 139);
+	border-radius: 2px;
 	background-color:#fff;
-	padding:3px;
-	color:#000; 
+	padding: 0.5rem;
 	font-size: 0.7rem;
 	width:max-content;
 	text-align: left;
 	top:0; 
 	left:105%;
-	box-shadow: 3px 3px 2px rgba(0, 0, 0, .35);
+	box-shadow: 3px 3px 2px rgba(0, 0, 0, .15);
 }
 
 .heatmap table tr td:hover span.cell-tooltip{
-	display:block;
+	display: grid;
+	grid-template-columns: fit-content(200px) fit-content(200px);
+	column-gap: 5px;
+	row-gap: 3px;
 }
 
 .policy-tooltip{
@@ -89,6 +91,16 @@
 .tooltip-row {
 	display: flex;
 	justify-content: space-between;
+}
+
+.cell-tooltip .tooltip-key {
+	color: rgb(102, 102, 102);
+	text-align: right;
+}
+
+.cell-tooltip .tooltip-value {
+	color: rgb(0, 0, 0);
+	text-align: left;
 }
 
 .tooltip-row span {
@@ -133,13 +145,13 @@
 
 .col-2 {
 	left: 90px;
-	min-width: 100px !important;
+	min-width: 50px !important;
 	vertical-align: middle !important;
 	z-index: 3 !important;
 }
 
 .col-3 {
-	left: 190px;
+	left: 140px;
 	min-width: 90px !important;
 	z-index: 2 !important;
 }
